style: fix scrollbar color

--- a/source/css/_partial/color.styl
+++ b/source/css/_partial/color.styl
@@ -7,7 +7,7 @@
     --font-color-1: #252933;
     --font-color-2: #515767;
     --font-color-3: #8a919f;
-    --scrollbar-color: #e4e6eb;
+    --scrollbar-color: #c8ccd6;
 }
 
 @media (prefers-color-scheme: dark) {
